# agda-forester

./: .gitignore  README.md  agda-forester.cabal  cabal.project  default.nix  mise.toml  proxy.toml  shell.nix
nix/: nixpkgs.nix
nix/Agda/: github.json
src/Forester/: Backend.hs  Base.hs  Data.hs  Html.hs  Structured.hs
treelist/: .gitignore  dune-project  flake.nix  treelist.opam
