(lang dune 3.17)

(name treelist)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name treelist)
 (synopsis "A small tool to list subtree ranges for agda-forester")
 (description "A longer description")
 (depends 
    ocaml
    (forester (>= 5))
    stdio
    ppx_deriving
    (yojson
      (>= 2.1.2))
    (ppx_yojson_conv
      (>= 0.17.0))
   )
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
